Pull request: AG-16898 Fix layout for rate block on options page
Merge in EXTENSIONS/vpn-extension from fix/AG-16898 to master

Squashed commit of the following:

commit 79625b49e862fa3077db147bec6ea904db15f7bb
Merge: 0434bfcc ff64eef5
Author: tvinzz <o.labudko@adguard.com>
Date:   Thu Oct 13 22:41:33 2022 +0700

    Merge branch 'master' into fix/AG-16898

commit 0434bfcc2932dd9857243cc8236daa8c82fdf9d0
Author: tvinzz <o.labudko@adguard.com>
Date:   Thu Oct 13 21:46:16 2022 +0700

    fixes

commit e0e8983e13c20eaedace9f9a8b66108bdebd613b
Author: Dmitriy Seregin <d.seregin@adguard.com>
Date:   Tue Oct 11 15:07:16 2022 +0400

    fixes

commit 7c49a7342f620ebb1ae2d755d0ff839e6013f9c5
Author: Dmitriy Seregin <d.seregin@adguard.com>
Date:   Tue Oct 11 14:27:31 2022 +0400

    fixes

commit 347cecf18788ce1de3ba4cc6238407f0120d8c49
Author: Dmitriy Seregin <d.seregin@adguard.com>
Date:   Tue Oct 11 14:24:09 2022 +0400

    fixes

commit 9cb3d8eaf02b332856d06b910ad693d75ad2f241
Author: tvinzz <o.labudko@adguard.com>
Date:   Mon Oct 10 23:16:49 2022 +0700

    fixed sidebar rate block layout

--- a/src/options/components/App/app.pcss
+++ b/src/options/components/App/app.pcss
@@ -1,6 +1,7 @@
 .wrapper {
     display: flex;
     min-height: 100%;
+    flex-direction: row;
 }
 
 .content {
@@ -17,7 +18,7 @@
         margin: 0 0 16px;
         font-size: 2.8rem;
         line-height: 3.1rem;
-        
+
         &--pointer {
             cursor: pointer;
         }
